@@ -1,5 +1,8 @@
 $Rev$
 [2007/09/24]
+FindInFiles.py      Improve Enter key process
+
+[2007/09/24]
 common.py           Fix get_config_file() bug(return '', should return a default filename
                     if the config.ini is not existed)
 DirBrowser.py       Fix add new sub folder has no children flag bug
